--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
-    ext.kotlin_version = '1.9.21'  // Update to the desired Kotlin version
+ ext.kotlin_version = '1.9.21'  // Update to the desired Kotlin version
+//    ext.kotlin_version = "1.6.10"
     repositories {
         google()
         mavenCentral()
@@ -7,9 +8,13 @@ buildscript {
 
     dependencies {
         // AGP version is set in settings.gradle.
-        classpath "com.android.tools.build:gradle:4.2.0" // Latest version
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" // Update to the desired Kotlin version
         classpath 'com.google.gms:google-services:4.3.10'
+//        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1' // Update to the latest version
+        classpath 'com.android.tools.build:gradle:7.3.0' // Update this version
+//        classpath 'com.android.tools.build:gradle:4.2.0'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.9'
+
 
 
     }
@@ -22,14 +27,39 @@ allprojects {
     }
 }
 
-rootProject.buildDir = '../build'
-subprojects {
-    project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
-    project.evaluationDependsOn(':app')
-}
+//rootProject.buildDir = '../build'
+//subprojects {
+//    project.buildDir = "${rootProject.buildDir}/${project.name}"
+//}
+//subprojects {
+//    project.evaluationDependsOn(':app')
+//}
+//
+//tasks.register("clean", Delete) {
+//    delete rootProject.buildDir
+//}
+//buildscript {
+//    repositories {
+//        google()
+//        mavenCentral()
+//    }
+//    ext {
+//        kotlin_version = "1.6.10"
+//        // Update to the desired Kotlin version
+//    }
+//    dependencies {
+//      classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" // Update to the desired Kotlin version
+//        classpath 'com.google.gms:google-services:4.3.10'
+//        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1' // Update to the latest version
+//        classpath 'com.android.tools.build:gradle:7.3.0' // Update this version
+//
+//    }
+//}
+//
+//allprojects {
+//    repositories {
+//        google()
+//        mavenCentral()
+//    }
+//}
 
-tasks.register("clean", Delete) {
-    delete rootProject.buildDir
-}
