--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc: ^7.2.0
   firebase_messaging: ^14.7.0
   firebase_core: ^2.19.0
 #  firebase_analytics: ^10.5.1
   firebase_analytics_web: ^0.5.5+21
   firebase_remote_config: ^4.3.15
-  firebase_crashlytics: ^3.4.17
+  firebase_crashlytics: ^3.5.4
   firebase_storage: ^11.6.8
   flutter_local_notifications: ^16.1.0
-  flutter_logs: ^2.1.11
+#  flutter_logs: ^2.1.12
   http: ^1.1.0  # Use the latest version available
   logger: ^1.0.0
   dio: ^4.0.6
@@ -53,7 +54,8 @@ dependencies:
   image_picker: ^1.0.1
   image_cropper: ^5.0.0
   image: ^3.0.2
-  fluttertoast: ^8.2.4
+  fluttertoast: ^8.2.5
+  popover: ^0.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -115,7 +117,7 @@ flutter:
     - assets/login/top1.png
     - assets/login/top2.png
     - assets/login/login_background.jpg
-    - assets/coupon/bottle.jpg
+    - assets/coupon/bottle.png
     - assets/profile/Profile_Image.png
     - assets/profile/Camera_Icon.svg
     - assets/profile/User Icon.svg
@@ -135,6 +137,13 @@ flutter:
     - assets/profile/username.png
     - assets/profile/password.png
     - assets/profile/credit_limit.png
+    - assets/quickAlerts/confirm.gif
+    - assets/quickAlerts/error.gif
+    - assets/quickAlerts/info.gif
+    - assets/quickAlerts/loading.gif
+    - assets/quickAlerts/success.gif
+    - assets/quickAlerts/warning.gif
+    - assets/quickAlerts/lightbulb.gif
 
 
   # To add assets to your application, add an assets section, like this:
